--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <h1>Hello JAMStack</h1>
+    <h2>My name is Dean Roberts and this is a network infrastructure class which we learn about network layers such as physical all the way to IP addresses, proxies, and VPC's. We also learn about AWS and how the software can be used in everyday busineses. </h2>
+    <h3>Thanks for looking.</h3>
     <p>This is my first Website ever</p>
   </body>
 </html>
