--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <title>ISTM 310 JAMStack</title>
   </head>
   <body>
-    <h1>Hello JAMStack</h1>
-    <h2>My name is Dean Roberts and this is a network infrastructure class which we learn about network layers such as physical all the way to IP addresses, proxies, and VPC's. We also learn about AWS and how the software can be used in everyday busineses. </h2>
-    <h3>Thanks for looking.</h3>
-    <p>This is my first Website ever</p>
+    <h1>Dean's Hobbies</h1>
+    <p>Hi, my name is Dean. I am a college student who loves the outdoors. I have a dog named Whiskey and I love doing all things outdoors with him. Me and Whiskey enjoy mountain biking, hunting, and exploring. </p>
+     <h3>Thanks for looking!</h3>
   </body>
 </html>
