--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>ISTM 310 JAMStack</title>
+    <title>Dean's Github Website Activity</title>
   </head>
   <body>
     <h1>Dean's Hobbies</h1>
-    <p>Hi, my name is Dean. I am a college student who loves the outdoors. I have a dog named Whiskey and I love doing all things outdoors with him. Me and Whiskey enjoy mountain biking, hunting, and exploring. </p>
+    <p>Hi, my name is Dean. I am a college student who loves the outdoors. I have a dog named Whiskey and I love doing all things outdoors with him. 
+Me and Whiskey enjoy mountain biking, hunting, and exploring. Our favorite hobby is going to Lake Bryan and moutain biking on the trails. Whiskey goes off leash and hes able to run his heart out. He is very good at staying on the trail and only going where hes meant. 
+Another hobby we enjoy is dove hunting, this is fun for Whiskey because he loves other animals so he gets super excited when he gets another bird.</p>
      <h3>Thanks for looking!</h3>
   </body>
 </html>
